added performance test

--- a/org.eclipselab.emf.ecore.protobuf.tests/build.properties
+++ b/org.eclipselab.emf.ecore.protobuf.tests/build.properties
@@ -1,4 +1,7 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               lib/bb.jar,\
+               lib/jsci-core.jar,\
+               lib/mt-13.jar
