replaced old performance test framework with junit-benchmarks

--- a/org.eclipselab.emf.ecore.protobuf.tests/build.properties
+++ b/org.eclipselab.emf.ecore.protobuf.tests/build.properties
@@ -12,7 +12,8 @@
 bin.includes = .,\
                model/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               lib/junit-benchmarks-0.2.1.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
