--- a/org.eclipselab.emf.protobuf.releng.repository/.project
+++ b/org.eclipselab.emf.protobuf.releng.repository/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipselab.emf.ecore.protobuf.releng.repository</name>
+	<name>org.eclipselab.emf.protobuf.releng.repository</name>
 	<comment></comment>
 	<projects>
 	</projects>
