--- a/org.eclipselab.emf.protobuf.releng/pom.xml
+++ b/org.eclipselab.emf.protobuf.releng/pom.xml
@@ -10,8 +10,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>	
-	<groupId>org.eclipselab.emf.ecore.protobuf</groupId>
-	<artifactId>org.eclipselab.emf.ecore.protobuf.releng</artifactId>
+	<groupId>org.eclipselab.emf.protobuf</groupId>
+	<artifactId>org.eclipselab.emf.protobuf.releng</artifactId>
 	<packaging>pom</packaging>
 	<version>0.1.0-SNAPSHOT</version>
 	<name>EMF ProtoBuf Integration (parent)</name>	
@@ -21,14 +21,13 @@
 	<modules>
 		<module>../org.eclipselab.emf.ecore.protobuf/</module>
 		<module>../org.eclipselab.emf.ecore.protobuf.tests/</module>
-		
-		<module>../org.eclipselab.emf.codegen.protobuf/</module>
-		<module>../org.eclipselab.emf.codegen.protobuf.ui/</module>
-		
 		<module>../org.eclipselab.emf.ecore.protobuf.feature/</module>
 		
-		<module>../org.eclipselab.emf.ecore.protobuf.releng.repository/</module>
-		<module>../org.eclipselab.emf.ecore.protobuf.releng.target/</module>
+		<module>../org.eclipselab.emf.codegen.protobuf/</module>
+		<module>../org.eclipselab.emf.codegen.protobuf.ui/</module>		
+		
+		<module>../org.eclipselab.emf.protobuf.releng.repository/</module>
+		<module>../org.eclipselab.emf.protobuf.releng.target/</module>
 	</modules>
 	<properties>
 		<tycho.version>0.12.0</tycho.version>
