--- a/org.eclipselab.emf.protobuf.releng.target/pom.xml
+++ b/org.eclipselab.emf.protobuf.releng.target/pom.xml
@@ -11,12 +11,12 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.eclipselab.emf.ecore.protobuf</groupId>
-		<artifactId>org.eclipselab.emf.ecore.protobuf.releng</artifactId>
+		<groupId>org.eclipselab.emf.protobuf</groupId>
+		<artifactId>org.eclipselab.emf.protobuf.releng</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
-		<relativePath>../org.eclipselab.emf.ecore.protobuf.releng/pom.xml</relativePath>
+		<relativePath>../org.eclipselab.emf.protobuf.releng/pom.xml</relativePath>
 	</parent>
-	<artifactId>org.eclipselab.emf.ecore.protobuf.releng.target</artifactId>
+	<artifactId>org.eclipselab.emf.protobuf.releng.target</artifactId>
 	<packaging>pom</packaging>
 	<name>EMF ProtoBuf Integration Target Platform</name>
 	<build>
