--- a/org.eclipselab.emf.codegen.protobuf/pom.xml
+++ b/org.eclipselab.emf.codegen.protobuf/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-   Copyright (c) 2011, Christian Kerl
-   All rights reserved. This program and the accompanying materials
-   are made available under the terms of the Eclipse Public License v1.0
-   which accompanies this distribution, and is available at
-   http://www.eclipse.org/legal/epl-v10.html
+<!-- 
+	Copyright (c) 2011, Christian Kerl 
+	All rights reserved. This program and the accompanying materials 
+	are made available under the terms of the Eclipse Public License v1.0 
+	which accompanies this distribution, and is available at 
+	http://www.eclipse.org/legal/epl-v10.html 
 -->
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
@@ -19,4 +19,31 @@
 	<artifactId>org.eclipselab.emf.codegen.protobuf</artifactId>
 	<packaging>eclipse-plugin</packaging>
 	<name>EMF ProtoBuf Code Generator</name>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.1.1</version>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>java</goal>
+						</goals>
+						<configuration>
+							<!-- Calls the AcceleoCompiler to launch the compilation. -->
+							<mainClass>org.eclipselab.emf.codegen.protobuf.AcceleoCompiler</mainClass>
+							<arguments>
+								<argument>${basedir}/src/</argument>  <!-- The source folder -->
+								<argument>${basedir}/target/classes</argument>  <!-- The output folder -->
+								<argument>true</argument>  <!-- Indicates if we should use binary resources serializations -->
+								<argument></argument>  <!-- The project dependencies in the workspace -->
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
