switched to Tycho 0.13.0; fixed classpath problem with Maven Exec Plugin and AcceleoCompiler;

--- a/org.eclipselab.emf.codegen.protobuf/build.properties
+++ b/org.eclipselab.emf.codegen.protobuf/build.properties
@@ -4,3 +4,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml
+# TODO: remove after Tycho 0.14.0, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=351842 
+jars.extra.classpath = platform:/plugin/org.eclipse.acceleo.parser
