--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: java
 install: 
-  - sudo apt-get install protobuf-compiler
+  - wget https://protobuf.googlecode.com/files/protobuf-2.4.1.tar.gz
+  - tar -xzvf protobuf-2.4.1.tar.gz
+  - cd protobuf-2.4.1
+  - ./configure --prefix=/usr
+  - make
+  - make check
+  - sudo make install
+  - cd ./../
+  - protoc --version
   - cd ./org.eclipselab.emf.protobuf.releng/
   - mvn package -DskipTests=true
 script: mvn test
