--- a/org.eclipselab.emf.protobuf.releng/pom.xml
+++ b/org.eclipselab.emf.protobuf.releng/pom.xml
@@ -47,6 +47,11 @@
 					<version>2.4.1</version>
 				</plugin>
 				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>1.1.1</version>
+				</plugin>
+				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-packaging-plugin</artifactId>
 					<version>${tycho.version}</version>
