added integration with protobuf-dt; the protobuf-dt preferences and compiler are now used if present

--- a/org.eclipselab.emf.codegen.protobuf.ui/plugin.xml
+++ b/org.eclipselab.emf.codegen.protobuf.ui/plugin.xml
@@ -3,10 +3,9 @@
 <plugin>
 
    <extension
-         id="org.eclipselab.emf.codegen.protobuf.ui.preferences.ProtobufGeneratorPreferencePageExtension"
          point="org.eclipse.ui.preferencePages">
       <page
-            name="ProtoBuf"
+            name="Protocol Buffer"
             class="org.eclipselab.emf.codegen.protobuf.ui.preferences.ProtobufGeneratorPreferencePage"
             id="org.eclipselab.emf.codegen.protobuf.ui.preferences.ProtobufGeneratorPreferencePage">
       </page>
